# tinyshakespeare-gpt-optimizers

./: .gitlint  README.md  gpt.py  pyproject.toml  references.bib  scion.py  train_shakespeare.py  tune_lr.py
docs/: 4_moment_bounds.md  scionc_reference_radius_parametrization.md  scionc_rms_radius_parametrization.md  scionc_shrink_rms_parametrization.md  scionc_steady_state_parametrization.md
scionc/: __init__.py  train_shakespeare.py
scionc/lmos/: __init__.py  core.py  streaming_svd.py
scionc/models/: gpt.py
scionc/optim/: __init__.py  lionk.py  parametrization.py  scion.py
scionc/probes/: convergence.py  line.py  optimizer_stats.py
scionc/ulmos/: __init__.py  core.py  streaming_svd.py
