[project]
name = "scionc"
version = "0.1.0"
description = "A compact ScionC optimizer sandbox"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.11.0",
    "triton-windows>=3.6.0.post26; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
